--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -68,3 +68,45 @@ body{
         }
     }
 }
+
+.advantages{
+    background-color: #F6F6F6;
+    padding: 70px 0 64px 0;
+    &__header{
+        font-weight: 700;
+        font-size: 30px;
+        text-align: center;
+        color: #0D0D0D;
+    }
+    &__items{
+        display: flex;
+        justify-content: space-between;
+        margin-top: 60px;
+  
+    }
+    &__item{
+        width: 233px;
+        img{
+            display: block;
+            margin: 0 auto;
+        }
+    }
+    &__item-header{
+        margin-top: 35px;
+        font-weight: 700;
+        font-size: 18px;
+        text-align: center;
+        color: #0D0D0D;
+    }
+    &__item-text{
+        margin-top: 20px;
+        font-weight: 300;
+        font-size: 14px;
+        text-align: center;
+        color: #0D0D0D;
+        a{
+            color: #FF0000;
+            text-transform: uppercase;
+        }
+    }
+}
