--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -1,6 +1,4 @@
 @import '_variables.scss';
-@import '_header.scss';
-@import '_button.scss';
 
 body{
     font-family: 'Museo Sans', sans-serif;
@@ -110,3 +108,7 @@ body{
         }
     }
 }
+
+@import '_header.scss';
+@import '_button.scss';
+@import '_media.scss';
