--- a/src/sass/_button.scss
+++ b/src/sass/_button.scss
@@ -14,4 +14,12 @@
         height: 50px;
         margin-top: 67px;
     }
+    &_forms{
+        width: 300px;
+        height: 58px;
+        font-weight: 500;
+        font-size: 16px;
+        color: #FFFFFF;
+        margin-top: 2px;
     }
+}
