add section catalog (tabs and flipping cards)

--- a/src/sass/_button.scss
+++ b/src/sass/_button.scss
@@ -22,4 +22,11 @@
         color: #FFFFFF;
         margin-top: 2px;
     }
+    &_catalog{
+        width: 135px;
+        height: 44px;
+        font-weight: 500;
+        font-size: 14px;
+        color: #FFFFFF;
+    }
 }
