--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -128,6 +128,193 @@ body{
     } 
 }
 
+.catalog{
+    margin-bottom: 79px;
+    &__title{
+        font-weight: 500;
+        font-size: 30px;
+        text-align: center;
+        text-transform: uppercase;
+        color: #0D0D0D;
+            }
+    &__tabs{
+        margin-bottom: 0;
+        padding-left: 0;
+        margin-top: 48px;
+        display: flex;
+        justify-content: center;
+
+    }
+    &__tab{
+        width: 200px;
+        height: 52px;
+        background: rgba(0, 0, 0, 0.0001);
+        border: 2px solid #D0D0D0;
+        list-style: none;
+        font-weight: 500;
+        font-size: 18px;
+        line-height: 48px;
+        text-align: center;
+        text-transform: uppercase;
+        color: #6B6B6B;
+        margin: 0 7px;
+        cursor: pointer;
+        transform: skewX(-25deg);
+        div{
+            transform: skewX(25deg);
+        }
+        &:hover{
+            box-shadow: 3px 3px 20px $main-color;
+        }
+        &_active{
+            background-color: $main-color;
+            font-weight: 500;
+            font-size: 18px;
+            text-align: center;
+            text-transform: uppercase;
+            color: #FFFFFF;
+            border: none;
+        }
+    }
+    &__items{
+        margin-top: 57px;
+        display: none;
+        flex-wrap: wrap;
+        justify-content: center;
+        &_active{
+            display: flex;
+        }
+    }
+
+    &__item{
+        width: 300px;
+        height: 442px;
+        background: #FFFFFF;
+        border: 2px solid #E8E8E8;
+        margin: 8px;
+        padding: 10px 20px;
+        overflow: hidden;
+        &-img{
+            max-width: 100%;
+            height: 200px;
+            margin: 0 auto;
+            display: block;
+        }
+        &-title{
+            font-weight: 700;
+            font-size: 16px;
+            text-align: center;
+            color: #0D0D0D;
+            margin-top: 15px;
+        }
+        &-text{
+            font-weight: 300;
+            font-size: 14px;
+            line-height: 22px;
+            text-align: center;
+            color: #0D0D0D;
+            margin-top: 15px;
+        }
+        &-link{
+            display: block;
+            font-weight: 500;
+            font-size: 14px;
+            text-align: center;
+            text-decoration-line: underline;
+            color: $main-color;
+            margin-top: 10px;
+            &:hover{
+                color: $main-color;
+            }
+        }
+        &-footer{
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+        }
+        &-old{
+            font-weight: 300;
+            font-size: 14px;
+            text-decoration-line: line-through;
+            color: #555555;
+        }
+        &-price{
+            font-weight: 700;
+            font-size: 20px;
+            color: #050505;
+        }
+        &-wrapper{
+            display: flex;
+            width: calc(200% + 40px);
+
+        }
+        &-content{
+            width: 50%;
+            margin-right: 0px;
+            transform: translateX(-100%);
+            transition: 0.5s all;
+            &_active{
+                transform: translateX(0%);
+                margin-right: 20px;
+            }
+        }
+        &-list{
+            position: relative;
+            width: 50%;
+            padding-left: 12;
+            margin-bottom: 0;
+            list-style: none;
+            transform: translateX(0%);
+            margin-left: 20px;
+            transition: 0.5s all;
+            &_active{
+                transform: translateX(-100%);
+                margin-left: 0;
+                padding-right: 20px;
+
+                
+            }
+            li{
+                position: relative;
+                font-weight: 300;
+                font-size: 14px;
+                line-height: 21px;
+                color: #555555;
+                margin-bottom: 10px;
+                &::before{
+                    content: '';
+                    display: block;
+                    width: 8px;
+                    height: 8px;
+                    background-color: $main-color;
+                    position: absolute;
+                    left: -14px;
+                    top: 8px;
+                }
+            }
+
+        }
+        &-back{
+            position: absolute;
+            bottom: 0px;
+            right: 50%;
+            transform: translateX(calc(50% - 12px));
+            font-weight: 500;
+            font-size: 14px;
+            text-decoration-line: underline;
+            text-transform: uppercase;
+            color: $main-color;
+            &:hover{
+                color: $main-color;
+            }
+        }
+    }
+    hr{
+        margin: 17px 0;
+    }
+
+}
+
 @import '_header.scss';
 @import '_button.scss';
 @import '_forms';
