--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -164,7 +164,7 @@ body{
             transform: skewX(25deg);
         }
         &:hover{
-            box-shadow: 3px 3px 20px $main-color;
+            box-shadow: 3px 3px 10px $main-color;
         }
         &_active{
             background-color: $main-color;
@@ -194,6 +194,8 @@ body{
         margin: 8px;
         padding: 10px 20px;
         overflow: hidden;
+        box-shadow: 2px 2px 10px #e8e8e8;
+
         &-img{
             max-width: 100%;
             height: 200px;
