--- a/src/sass/_media.scss
+++ b/src/sass/_media.scss
@@ -66,6 +66,21 @@
             margin-bottom: 10px;
         }
     }
+    .feedback{
+        &__item{
+        margin-top: 60px;
+        flex-direction: column;
+        align-items: center;
+        }
+        &__img{
+            margin-right: 0;
+            margin-bottom: 30px;
+        }
+        &__info{
+            padding-right: 0;
+            text-align: center;
+        }
+    }
 }
 
 @media (max-width: 575px){
