--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -317,9 +317,134 @@ body{
 
 }
 
+.feedback{
+    background-color: #fff;
+    padding-bottom: 50px;
+    &__title{
+        font-weight: 700;
+        font-size: 30px;
+        text-align: center;
+        text-transform: uppercase;
+        color: #0D0D0D;
+    }
+    &__item{
+        margin-top: 60px;
+        display: flex;
+        justify-content: space-between;
+    }
+    &__img{
+        width: 169px;
+        height: 169px;
+        border-radius: 50%;
+        margin-right: 60px;
+
+    }
+    &__info{
+        max-width: 720px;
+        padding-right: 56px;
+        &-title{
+            font-weight: 700;
+            font-size: 18px;
+            color: #0D0D0D;
+        }
+        &-marafon{
+            font-weight: 500;
+            font-size: 14px;
+            color: #646464;
+        }
+        p{
+            font-weight: 300;
+            font-size: 16px;
+            line-height: 24px;
+            color: #0D0D0D;
+        }
+        p:nth-child(3){
+            margin-top: 12px;
+        }
+    }
+}
+
+.footer{
+    height: 630px;
+    position: relative;
+    &__info{
+        position: absolute;
+        top: 0;
+        left: 50%;
+        transform: translateX(-50%);
+        max-width: 460px;
+        height: 270px;
+        background: $main-color;
+        padding: 50px 54px 56px;
+    }
+    &__address{
+        font-weight: 500;
+        font-size: 18px;
+        line-height: 18px;
+        text-align: center;
+        color: #FFFFFF;
+        margin-bottom: 36px;
+    }
+    &__tel{
+        display: block;
+        font-weight: 700;
+        font-size: 20px;
+        line-height: 20px;
+        text-align: center;
+        color: #FFFFFF;
+        text-decoration: none;
+        margin-bottom: 36px;
+        &:hover{
+            color: #ffffff;
+            text-decoration: underline;
+        }
+    }
+    &__social{
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+    &__social-item{
+        width: 52px;
+        height: 52px;
+        border-radius: 50%;
+        border: 2px solid #FFFFFF;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        margin: 0 15px;
+        img{
+            width: 100%;
+            height: 25px;
+        }
+    }
+    
+}
+
+.youtube{
+    max-width: 850px;
+    margin: 30px auto;
+    position: relative;
+
+    &__ration{
+        padding-top: 56.25%;
+        height: 0;
+    }
+    &__cont{
+        width: 100%;
+        height: 100%;
+        position: absolute;
+        top: 0;
+        left: 0;
+        border: none;
+    }
+}
+
+
 @import '_header.scss';
 @import '_button.scss';
 @import '_forms';
 @import '_slicker';
+@import '_modal';
 
 @import '_media.scss';
