--- a/src/sass/_button.scss
+++ b/src/sass/_button.scss
@@ -21,6 +21,7 @@
         font-size: 16px;
         color: #FFFFFF;
         margin-top: 2px;
+        margin-top: 15px;
     }
     &_catalog{
         width: 135px;
