--- a/src/sass/_forms.scss
+++ b/src/sass/_forms.scss
@@ -1,5 +1,5 @@
 .forms{
-    margin-top: 36px;
+    margin-top: 21px;
     display: flex;
     flex-direction: column;
     width: 300px;
@@ -8,7 +8,14 @@
         border: none;
         border-radius: 5px;
         height: 52px;
-        margin-bottom: 15px;
+        margin-top: 15px;
         padding: 0 20px;
+    }
+    input.error{
+        border: 2px solid $main-color;
+       
+    }
+    label.error{
+        color: $main-color;
     }
 }
