--- a/src/sass/_modal.scss
+++ b/src/sass/_modal.scss
@@ -39,11 +39,11 @@
         margin-top: 10px;
     }
     &__form{
-        margin-top: 26px;
+        margin-top: 14px;
         input{
             width: 100%;
             height: 50px;
-            margin-bottom: 12px;
+            margin-top: 12px;
             background-color: #ffffff;
             border: none;
             border-radius: 5px;
@@ -64,7 +64,15 @@
             text-align: center;
             text-transform: uppercase;
             color: #FFFFFF;
+            margin-top: 15px;
         }
+    }
+    input.error{
+        border: 2px solid $main-color;
+       
+    }
+    label.error{
+        color: $main-color;
     }
 }
 
