--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -111,7 +111,8 @@ body{
 
 .consultation{
     background: url(../img/consultation_bg.jpg) center (center/cover) no-repeat;
-    padding: 105px 0;
+    height: 661px;
+    padding-top: 105px;
     &__title{
         font-weight: 700;
         font-size: 36px;
