--- a/src/sass/_media.scss
+++ b/src/sass/_media.scss
@@ -81,6 +81,16 @@
             text-align: center;
         }
     }
+
+    .modal__close{
+        top: 14px;
+        right: 14px;
+    }
+
+    .pageup{
+        right: 20px;
+        bottom: 30px;
+    }
 }
 
 @media (max-width: 575px){
