Change gulpfile, add new task. Add new plugin htmlMin & imageMin

--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -1,4 +1,7 @@
 @import '_variables.scss';
+@import 'libs/_bootstrap-reboot.min';
+@import 'libs/_font';
+@import 'libs/_slick';
 
 body{
     font-family: 'Museo Sans', sans-serif;
